03-kubernetes/basic/book-service/config/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
  labels:
    app: book-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-service
  template:
    metadata:
      labels:
        app: book-service
    spec:
      containers:
        - name: book-service
          image: book-service
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 1001
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.2"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "1Gi"
