03-kubernetes/basic/book-service/config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: book-service
                port:
                  number: 80
